// Copyright 2024 孔令飞 <colin404@foxmail.com>. All rights reserved.
// Use of this source code is governed by a MIT style
// license that can be found in the LICENSE file. The original repo for
// this file is https://github.com/ashwinyue/one-auth. The professional
// version of this repository is https://github.com/onexstack/onex.

// User API 定义，包含用户信息、登录请求和响应等相关消息
syntax = "proto3"; // 告诉编译器此文件使用什么版本的语法

package v1;

import "github.com/onexstack/defaults/defaults.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/ashwinyue/one-auth/pkg/api/apiserver/v1;v1";

// User 表示用户信息
message User {
    // userID 表示用户 ID
    string userID = 1;
    // username 表示用户名称
    string username = 2;
    // nickname 表示用户昵称
    string nickname = 3;
    // email 表示用户电子邮箱
    string email = 4;
    // phone 表示用户手机号
    string phone = 5;
    // postCount 表示用户拥有的博客数量
    int64 postCount = 6;
    // createdAt 表示用户注册时间
    google.protobuf.Timestamp createdAt = 7;
    // updatedAt 表示用户最后更新时间
    google.protobuf.Timestamp updatedAt = 8;
}

// LoginRequest 表示登录请求
message LoginRequest {
    // login_type 表示登录方式：username, email, phone
    string login_type = 1;
    // identifier 表示登录标识符（用户名、邮箱或手机号）
    string identifier = 2;
    // password 表示用户密码（密码登录时必填）
    optional string password = 3;
    // verify_code 表示验证码（验证码登录时必填）
    optional string verify_code = 4;
    // client_type 表示客户端类型：web, h5, android, ios, mini_program, op
    optional string client_type = 5;
    // device_id 表示设备ID（用于设备管理）
    optional string device_id = 6;
}

// LoginResponse 表示登录响应
message LoginResponse {
    // token 表示返回的身份验证令牌
    string token = 1;
    // expireAt 表示该 token 的过期时间
    google.protobuf.Timestamp expireAt = 2;
    // refresh_token 表示刷新令牌
    string refresh_token = 3;
    // user_info 表示用户基本信息
    UserInfo user_info = 4;
    // session_id 表示会话ID
    string session_id = 5;
}

// UserInfo 表示用户基本信息
message UserInfo {
    // user_id 表示用户ID
    string user_id = 1;
    // username 表示用户名
    string username = 2;
    // nickname 表示昵称
    string nickname = 3;
    // email 表示邮箱
    string email = 4;
    // phone 表示手机号
    string phone = 5;
    // status 表示用户状态：active, inactive, locked, banned
    string status = 6;
    // last_login_time 表示最后登录时间
    google.protobuf.Timestamp last_login_time = 7;
}

// SendVerifyCodeRequest 表示发送验证码请求
message SendVerifyCodeRequest {
    // target 表示目标（邮箱或手机号）
    string target = 1;
    // code_type 表示验证码类型：login, register, reset_password
    string code_type = 2;
    // target_type 表示目标类型：email, phone
    string target_type = 3;
}

// SendVerifyCodeResponse 表示发送验证码响应
message SendVerifyCodeResponse {
    // success 表示是否成功
    bool success = 1;
    // message 表示响应消息
    string message = 2;
    // cooldown_seconds 表示冷却时间（秒）
    int32 cooldown_seconds = 3;
}

// LogoutRequest 表示登出请求
message LogoutRequest {
    // session_id 表示会话ID（可选，不传则登出当前会话）
    optional string session_id = 1;
    // logout_all 表示是否登出所有设备
    optional bool logout_all = 2;
}

// LogoutResponse 表示登出响应
message LogoutResponse {
    // success 表示是否成功
    bool success = 1;
    // message 表示响应消息
    string message = 2;
}



// RefreshTokenRequest 表示刷新令牌的请求
message RefreshTokenRequest {
    // 该请求无需额外字段，仅通过现有的认证信息（如旧的 token）进行刷新
}

// RefreshTokenResponse 表示刷新令牌的响应
message RefreshTokenResponse {
    // token 表示返回的身份验证令牌
    string token = 1;
    // expireAt 表示该 token 的过期时间
    google.protobuf.Timestamp expireAt = 2;
}

// ChangePasswordRequest 表示修改密码请求
message ChangePasswordRequest {
    // userID 表示用户 ID
    string userID = 1;
    // oldPassword 表示当前密码
    string oldPassword = 2;
    // newPassword 表示准备修改的新密码
    string newPassword = 3;
}

// ChangePasswordResponse 表示修改密码响应
message ChangePasswordResponse {
}

// CreateUserRequest 表示创建用户请求
message CreateUserRequest {
    // username 表示用户名称
    string username = 1;
    // password 表示用户密码
    string password = 2;
    // nickname 表示用户昵称
    optional string nickname = 3 [(defaults.value).string = "你好世界"];
    // email 表示用户电子邮箱
    string email = 4;
    // phone 表示用户手机号
    string phone = 5;
}

// CreateUserResponse 表示创建用户响应
message CreateUserResponse {
    // userID 表示新创建的用户 ID
    string userID = 1;
}

// UpdateUserRequest 表示更新用户请求
message UpdateUserRequest {
    // userID 表示用户 ID
    string userID = 1;
    // username 表示可选的用户名称
    optional string username = 2;
    // nickname 表示可选的用户昵称
    optional string nickname = 3;
    // email 表示可选的用户电子邮箱
    optional string email = 4;
    // phone 表示可选的用户手机号
    optional string phone = 5;
}

// UpdateUserResponse 表示更新用户响应
message UpdateUserResponse {
}

// DeleteUserRequest 表示删除用户请求
message DeleteUserRequest {
    // userID 表示用户 ID
    // @gotags: uri:"userID"
    string userID = 1;
}

// DeleteUserResponse 表示删除用户响应
message DeleteUserResponse {
}

// GetUserRequest 表示获取用户请求
message GetUserRequest {
    // userID 表示用户 ID
    // @gotags: uri:"userID"
    string userID = 1;
}

// GetUserResponse 表示获取用户响应
message GetUserResponse {
    // user 表示返回的用户信息
    User user = 1;
}

// ListUserRequest 表示用户列表请求
message ListUserRequest {
    // offset 表示偏移量
    // @gotags: form:"offset"
    int64 offset = 1;
    // limit 表示每页数量
    // @gotags: form:"limit"
    int64 limit = 2;
}

// ListUserResponse 表示用户列表响应
message ListUserResponse {
    // totalCount 表示总用户数
    int64 totalCount = 1;
    // users 表示用户列表
    repeated User users = 2;
}
